# GeoCore

./: .gitignore  EDA.ipynb  LICENSE.txt  README.md  data_pipeline.py  modeling.py  others.md  pyproject.toml  results.ipynb
dockerfiles/: Dockerfile
dockerfiles/cpu/: Dockerfile
dockerfiles/gpu/: Dockerfile.gpu
experiment_configs/: custom_fishing.yaml  lightgbm_fishing.yaml  lightgbm_gbdt_model_ingenious.yaml
modeling/: README.md
modeling/actions/: mlflow_ui.py  train.py
modeling/config/: README.md  __init__.py  config.py  defaults.py
modeling/cross_validators/: README.md  __init__.py  base.py  block.py  build.py
modeling/datasets/: README.md  __init__.py  base.py  build.py  features.py  labels.py  test_data.py
modeling/models/: README.md  __init__.py  base.py  build.py  lgbm_binary_classifier.py  neural_networks.py  svm.py
modeling/queries/: Ingenious_hot_springs.py  README.md  __init__.py
modeling/utils/: data.py  dekart_map_config.py  distances.py  git.py  logging.py  metrics.py  mlflow.py  plotting.py  snowflake.py
