[tool.poetry]
name = "ml-geo-core-public"
version = "0.1.0"
description = "The ml geo core"
authors = ["Zanskar ML Team"]
license = "Zanskar proprietary code. All rights reserved."
readme = "README.md"
packages = [{include = "modeling"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.2"
pandas = "2.0.3"
scikit-learn = "1.4.0"
lightgbm = "3.3.5"
colorlog = "^6.8.2"
fvcore = "0.1.5.post20221221"
h3 = "3.7.6"
snowflake-connector-python = { version = "3.0.4", extras = ["pandas"] }
llvmlite = "0.41.0"
numba = "0.58.1"
shap = "0.43.0"
matplotlib = "^3.8.0"
scikit-optimize = "0.9.0"
seaborn = "^0.13.0"
mlflow = "2.7.1"
shapely = "2.0.2"
pyproj = "3.6.1"
google-auth = "2.23.3"
google-cloud = "0.34.0"
google-cloud-storage = "2.12.0"
keplergl = "0.2.2"
panel = "1.3.7"
streamlit = "^1.28.0"
streamlit-ace = "^0.1.1"
watchdog = "^3.0.0"
streamlit-code-editor = "^0.1.10"
gitpython = "^3.1.40"
pymetis = "^2023.1.1"
#kahypar = "^1.3.5"
xgboost = "^2.0.3"
optuna = "^3.5.0"
scikit-gstat = "^1.0.12"
gstools = "^1.5.1"
google-cloud-iam = "^2.13.0"
pyod = "^1.1.2"
suod = "^0.1.1"
#torch = {version = "^2.1.2+cpu", source = "torch-cpu"}
gprof2dot = "^2021.2.21"

graphviz = "^0.20.3"
snakeviz = "^2.2.2"
click = "^8.1.8"
[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "modeling.actions.train:train"
mlflow-ui = "modeling.actions.mlflow_ui:open_mlflow_ui"


[tool.poetry.plugins]
"mlflow.request_header_provider"  = {auth = "modeling.utils.mlflow_plugin:PluginRequestHeaderProvider"}
